--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "devDependencies": {
+    "@types/jasmine": "^4.3.1",
     "@webpack-cli/generators": "^3.0.1",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jasmine-browser-runner": "^1.3.0",
+    "jasmine-core": "^4.5.0",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
@@ -104,7 +107,7 @@
   },
   "scripts": {
     "start": "concurrently \"json-server --watch ./src/data/candles.json\" \"webpack serve\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine-browser-runner runSpecs",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
