--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@angular-charts/chart-engine": ["chart-engine/src/index.ts"]
+    }
   },
   "files": [],
   "include": [],
