added angular interface + simple api

--- a/chart-interface/.eslintrc.json
+++ b/chart-interface/.eslintrc.json
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "angular-charts",
+            "prefix": "ng-candlechart",
             "style": "kebab-case"
           }
         ]
