changed to buildable library

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@angular-charts/chart-core": ["chart-core/src/index.ts"],
       "@kowalskiddamian/ng-candlecharts": ["chart-interface/src/index.ts"]
     }
   },
