--- a/chart-core/project.json
+++ b/chart-core/project.json
@@ -1,21 +1,31 @@
 {
-  "name": "chart-engine",
+  "name": "chart-core",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "chart-engine/src",
+  "sourceRoot": "chart-core/src",
   "projectType": "library",
   "targets": {
+    "build": {
+      "executor": "@nrwl/js:tsc",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/./chart-core",
+        "main": "chart-core/src/index.ts",
+        "tsConfig": "chart-core/tsconfig.lib.json",
+        "assets": ["chart-core/*.md"]
+      }
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["chart-engine/**/*.ts"]
+        "lintFilePatterns": ["chart-core/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "chart-engine/jest.config.ts",
+        "jestConfig": "chart-core/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
