--- a/project.json
+++ b/project.json
@@ -17,7 +17,8 @@
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
         "styles": ["./src/styles.scss"],
-        "scripts": []
+        "scripts": [],
+        "webWorkerTsConfig": "tsconfig.worker.json"
       },
       "configurations": {
         "production": {
@@ -76,7 +77,8 @@
       "outputs": ["{workspaceRoot}/coverage/{projectName}"],
       "options": {
         "jestConfig": "jest.config.app.ts",
-        "passWithNoTests": true
+        "passWithNoTests": true,
+        "webWorkerTsConfig": "tsconfig.worker.json"
       },
       "configurations": {
         "ci": {
