--- a/ng-charts-core/tsconfig.json
+++ b/ng-charts-core/tsconfig.json
@@ -3,7 +3,7 @@
       "outDir": "./dist/",
       "noImplicitAny": true,
       "sourceMap": true,
-      "module": "commonjs",
+      "module": "es2022",
       "target": "es5",
       "allowJs": true,
       "moduleResolution": "node"
