--- a/ng-charts-core/package.json
+++ b/ng-charts-core/package.json
@@ -4,7 +4,9 @@
   "description": "NgCharts core project",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "npx webpack serve",
+    "candles": "json-server --watch ./src/data/candles.json"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +15,10 @@
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.76.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "json-server": "^0.17.2"
   }
 }
