--- a/ng-charts-core/package.json
+++ b/ng-charts-core/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "json-server": "^0.17.2"
+    "json-server": "^0.17.2",
+    "rxjs": "^7.8.0"
   }
 }
