--- a/ng-charts-core/package.json
+++ b/ng-charts-core/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ng-charts-core",
-  "version": "0.0.0",
+  "name": "@kowalskiddamian/chart-core",
+  "version": "0.1.2",
   "description": "NgCharts core project",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
     "start": "npx webpack serve",
-    "candles": "json-server --watch ./src/data/candles.json"
+    "candles": "json-server --watch ./data/candles.json"
   },
   "author": "",
   "license": "ISC",
