--- a/ng-charts-core/package.json
+++ b/ng-charts-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kowalskiddamian/chart-core",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "NgCharts core project",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "candles": "json-server --watch ./data/candles.json"
   },
   "author": "",
+  "files": ["dist/*"],
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
