--- a/ng-charts-core/tsconfig.json
+++ b/ng-charts-core/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/",
+      "outDir": "./core/",
       "noImplicitAny": true,
       "sourceMap": true,
       "module": "commonjs",
       "target": "es5",
       "allowJs": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "declaration": true,
     }
   }
