--- a/projects/ngx-candlecharts/package.json
+++ b/projects/ngx-candlecharts/package.json
@@ -7,6 +7,7 @@
     "ngx-candlecharts-core": "^0.1.6"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "ngx-candlecharts-core": "^0.1.6"
   }
 }
