--- a/projects/ngx-candlecharts/package.json
+++ b/projects/ngx-candlecharts/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "ngx-candlecharts-core": "^0.1.6"
+    "@angular/core": "^15.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0",
-    "ngx-candlecharts-core": "^0.1.6"
+    "tslib": "^2.3.0"
   }
 }
